--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 
                 </div>
                 <div class="contactform">
-                    <form id="contactform" method="post"action="">
+                    <form id="contactform" method="post"action="contactform.php">
                         <input name="name"type="text" class="form-control" placeholder="Your Name" required ><br>
                         <input name="email"type="email" class="form-control" placeholder="Your Email"required ><br>
                         <textarea name="message" class="form-control"placeholder="Message" row="4"required></textarea><br>
